# hello-cloud

./: .claude-project-memory.md  .gitignore  .jupytext.toml  .pre-commit-config.yaml  404.html  CLAUDE.md  CLEANUP_PLAN.md  HISTORY_CLEANUP_COMPLETE.md  LICENSE  README.md  RENAME_TO_HELLOCLOUD_PLAN.md  REPOSITORY_CLEANUP_REPORT.md  analyze_frequency.py  entity_cost_analysis.py  index.html  jupytext.toml  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml
DEPLOYMENT/: index.html
concepts/: index.html  index.qmd
concepts/design/gaussian-process-design/: index.html
concepts/research/: index.html
concepts/research/cloud-resource-correlations-report/: index.html
concepts/research/cloud-resource-patterns-research/: index.html
concepts/research/opentslm-foundation-model-evaluation/: index.html
concepts/research/timeseries-anomaly-datasets-review/: index.html
development/CODE_QUALITY/: index.html
docs/: DEPLOYMENT.md  README.md  _quarto.yml  index.md  index.qmd  objects.json
docs/_archive/: eda-workflow-consolidated.md  eda-workflow-summary.md  eda-workflow-visual-summary.md
docs/_meta/: LOCAL_TESTING.md  MIGRATION_SUMMARY.md  README.md  STRUCTURE.md
docs/_site/: index.html  robots.txt  search.json  sitemap.xml
docs/_site/concepts/: index.html
docs/_site/how-to/: generate-synthetic-data.html  index.html  train-gp-models.html
docs/_site/reference/: data_generation.CloudMetricsDatasetBuilder.html  data_generation.CloudMetricsSimulator.html  data_generation.WorkloadPatternGenerator.html  data_generation.WorkloadType.html  index.html  ml_models.gaussian_process.CompositePeriodicKernel.html  ml_models.gaussian_process.SparseGPModel.html  ml_models.gaussian_process.compute_metrics.html  ml_models.gaussian_process.initialize_inducing_points.html  ml_models.gaussian_process.train_gp_model.html
docs/_site/tutorials/: data-exploration.html  gaussian-processes.html  index.html  workload-signatures.html
docs/_theme/: README.md  custom-dark.scss  custom-light.scss  styles.css
docs/concepts/: index.md
docs/concepts/research/: README.md  cloud-resource-correlations-report.md  cloud-resource-patterns-research.md  opentslm-foundation-model-evaluation.md  timeseries-anomaly-datasets-review.md  timeseries-anomaly-datasets-review.qmd
docs/design/: README.md  history-cleanup-strategy.md  library-first-refactoring-plan.md  rebase-execution-plan.md
docs/development/: CODE_QUALITY.md
docs/how-to/: generate-synthetic-data.qmd  index.qmd  train-gp-models.qmd
docs/modeling/: gaussian-process-design.md
docs/notebooks/: index.md  index.qmd  published
docs/plans/: 2025-10-11-pyspark-migration.md  2025-10-13-timeseries-loader.md  2025-10-15-fix-test-failures.md  2025-10-15-notebook-centric-docs.md
docs/reference/: data_generation.CloudMetricsDatasetBuilder.qmd  data_generation.CloudMetricsSimulator.qmd  data_generation.WorkloadPatternGenerator.qmd  data_generation.WorkloadType.qmd  index.md  index.qmd  ml_models.gaussian_process.CompositePeriodicKernel.qmd  ml_models.gaussian_process.SparseGPModel.qmd  ml_models.gaussian_process.compute_metrics.qmd  ml_models.gaussian_process.initialize_inducing_points.qmd  ml_models.gaussian_process.train_gp_model.qmd
docs/research/: README.md  cloud-resource-correlations-report.md  cloud-resource-patterns-research.md
docs/tutorials/: data-exploration.qmd  gaussian-processes.qmd  index.qmd  iops-eda.qmd  workload-signatures.qmd
notebooks/: 01_data_exploration.md  01_data_exploration.py  02_guide_workload_signatures_guide.md  02_guide_workload_signatures_guide.py  02_workload_signatures_guide.md  02_workload_signatures_guide.py  03_EDA_iops_web_server.md  03_EDA_iops_web_server.py  03_iops_web_server_eda.md  04_gaussian_process_modeling.md  04_modeling_gaussian_process.md  04_modeling_gaussian_process.py  05_EDA_piedpiper_data.md  05_EDA_piedpiper_data.py  05_cloudzero_piedpiper_analysis.md  05_cloudzero_piedpiper_eda.md  06_piedpiper_statistical_analysis.md  06_quickstart_timeseries_loader.md  07_forecasting_comparison.md  README.md  TROUBLESHOOTING.md  WORKFLOW.md  index.html
notebooks/myst/: 01_data_exploration.md  02_workload_signatures_guide.md
notebooks/published/: 05_EDA_piedpiper_data.ipynb  06_quickstart_timeseries_loader.ipynb  07_forecasting_comparison.ipynb
notebooks/published/02_guide_workload_signatures_guide/: 02_guide_workload_signatures_guide.ipynb  index.html
notebooks/published/03_EDA_iops_web_server/: 03_EDA_iops_web_server.ipynb  index.html
notebooks/published/04_modeling_gaussian_process/: 04_modeling_gaussian_process.ipynb  index.html
notebooks/published/05_EDA_piedpiper_data/: index.html
notebooks/published/06_quickstart_timeseries_loader/: index.html
notebooks/published/07_forecasting_comparison/: index.html
plans/: 2025-10-11-pyspark-migration.md  2025-10-15-notebook-centric-docs.md
reference/: index.html
scripts/: convert_polars_to_ibis.py
search/: search_index.json
src/cloud_sim/: __init__.py
src/cloud_sim/data_generation/: cloud_metrics_simulator.py  hf_dataset_builder.py  workload_patterns.py
src/cloud_sim/etl/: __init__.py  cloudzero_loader.py
src/cloud_sim/ml_models/: __init__.py  (+3 more)
src/cloudzero_sim/: __init__.py
src/hellocloud/: __init__.py
tests/: conftest.py  test_advanced_forecasting.py  test_application_taxonomy.py  test_data_generation.py  test_eda_analysis.py  test_foundation_stubs.py  test_hf_dataset_builder.py  test_notebooks.py  test_project_config.py  test_pymc_cloud_model.py  test_transforms.py
tests/analysis/: test_eda.py
tests/etl/: __init__.py  test_cloudzero_loader.py
tests/io/: test_loaders.py
tests/ml_models/: test_gaussian_process_evaluation.py  test_gaussian_process_kernels.py  test_gaussian_process_models.py  test_gaussian_process_training.py
tests/modeling/: test_arima_forecaster.py  test_baseline_forecasters.py
tests/spark/: __init__.py  test_session.py
tests/timeseries/: __init__.py  test_core.py
tests/transforms/: __init__.py  test_spark_transforms.py
(+81 files in other folders)
